--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section class="questions">
                 <div class="questions__im im">
                     <div class="im__photo">
-                        <img src="/img/photo.png" alt="photo">
+                        <img src="./img/photo.png" alt="photo">
                     </div>
                     <div class="im__name">
                         <p style="display: none;"></p>
