--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section class="questions">
                 <div class="questions__im im">
                     <div class="im__photo">
-                        <img src="./img/photo.png" alt="photo">
+                        <img src="/img/photo.png" alt="photo">
                     </div>
                     <div class="im__name">
                         <p style="display: none;"></p>
@@ -51,7 +51,15 @@
                 </div>
                 <div class="questions__git">
                     <p>Ссылки на гитхаб, линкедин</p>
-                    <a href="https://github.com/aRT173" target="_blank">https://github.com/aRT173</a>
+                    <ul>
+                        <li>
+                            <a href="https://github.com/aRT173" target="_blank">github</a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/artem-afanasyev-94a1a8250/"
+                                target="_blank">linkedin</a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="questions__about">
                     <p>Контактная информация и город</p>
