--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--lang=ru контент страницы на русском-->
 <html lang="en">
 
 <head>
@@ -21,7 +22,10 @@
                         <img src="./img/photo.png" alt="photo">
                     </div>
                     <div class="im__name">
+<!--                        этот p лишён смысла-->
                         <p style="display: none;"></p>
+<!--                        ФИО это заголовок, параграфы используются для статей,-->
+<!--                        далее по коду нет ни одного места где нужен параграф, это всё div тег-->
                         <p>Афанасьев Артём Александрович</p>
                     </div>
                 </div>
